# vulnfix

./: README.md  action.yml  pyproject.toml
examples/: vulnfix.yml  workflow.yml
src/vulnfix/: cli.py  config.py  orchestrator.py  telemetry.py
src/vulnfix/fixers/: ai_claude_code.py  deterministic.py  verifier.py
src/vulnfix/models/: finding.py
src/vulnfix/scanners/: __init__.py  bandit.py  base.py  gitleaks.py  grype.py  semgrep.py  trivy.py
src/vulnfix/vcs/: __init__.py  github.py
tests/: test_smoke.py
