[project]
name = "vulnfix"
version = "0.1.3"
description = "AI-powered auto-remediation for security scanner findings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "vulnfix maintainers" }]
dependencies = []

[project.scripts]
vulnfix = "vulnfix.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
